Clean up pom.xml